Changed format of email sent to user on errors.  The error will now appear instead of the generic message when I am confident it is accurate.  The subject line will also change to reflect the cause of an error.
Avoid sending mail to testbed-ops during failed swap related evenets
in some cases.  It will instead be sent to a new mailing list
testbed-errors.

Added a new row in the experiment info table "Last Error:" which
states the cause of the error, and links to a new page displaying the
error.

Made some assign/assign_wrapper errors more informative.

The error (as determined by tblog) is now stored in the database in a
more structured fashion.  This inlcudes adding a column for the session
(in the log table) to testbed_stats to link eash swap event with the
logs and possible the error.

Other changes to the database, see sql/database-migrate.txt

--- a/db/libdb.pm.in
+++ b/db/libdb.pm.in
@@ -4740,6 +4740,9 @@ sub GatherSwapStats($$$$$;$)
 	$TBDB_STATS_STARTCLOCK = time();
 	return;
     }
+    
+    my $session = tblog_session();
+    $session = 'NULL' unless defined $session;
 
     local $DBQUERY_MAXTRIES = 0;
 
@@ -4770,7 +4773,8 @@ sub GatherSwapStats($$$$$;$)
     if ($ecode) {
 	DBQueryWarn("update experiment_stats set ".
 		    "  swap_errors=swap_errors+1, ".
-		    "  swap_exitcode=$ecode ".
+		    "  swap_exitcode=$ecode, ".
+		    "  last_error=$session ".
 		    "where pid='$pid' and eid='$eid' and exptidx=$exptidx");
 
 	#
@@ -4989,11 +4993,14 @@ sub GatherSwapStats($$$$$;$)
 		$tmp = TBDB_STATS_SWAPIN;
 	    }
 
+	    
+
 	    DBQueryWarn("update experiment_stats ".
 			"set ${tmp}_count=${tmp}_count+1, ".
 			"    ${tmp}_last=now(), ".
 			"    swapin_duration=swapin_duration+${duration}, ".
-			"    swap_exitcode=0 ".
+			"    swap_exitcode=0, ".
+			"    last_error=NULL ".
 			"where pid='$pid' and eid='$eid' and  ".
 			"      exptidx=$exptidx");
 	}
@@ -5047,9 +5054,9 @@ sub GatherSwapStats($$$$$;$)
 
     DBQueryWarn("insert into testbed_stats ".
 		"(idx, uid, start_time, end_time, exptidx, rsrcidx, ".
-		" action, exitcode) ".
+		" action, exitcode, log_session) ".
 		"values (0, '$uid', $starttime, now(), $exptidx, $rsrcidx, ".
-		"        '$mode', $ecode)");
+		"        '$mode', $ecode, $session)");
 
     # We do these here since even failed operations implies activity
     DBQueryWarn("update user_stats set last_activity=now() ".
