--- a/tbsetup/batchexp.in
+++ b/tbsetup/batchexp.in
@@ -875,23 +875,20 @@ sub cleanup()
     TBExptClearLogFile($pid, $eid);
 
     #
+    # Figure out the error if possible
+    #
+    my $error_data = tblog_find_error();
+
+    #
     # Send a message to the testbed list. 
     #
-    SENDMAIL("$user_name <$user_email>",
-	 "Experiment Configure Failure: $pid/$eid",
-	 "Please look at the log below to see what happened. If the error\n".
-	 "resulted from a lack of free nodes, you can use this web page to\n".
-	 "get a summary of free nodes:\n\n".
-	 "  ${TBBASE}/nodecontrol_list.php3\n".
-	 "\n".
-	 "Please do not try again until you see enough nodes free. Or, you\n".
-	 "can use the batch system to swap your experiment in when enough\n".
-	 "nodes are free:\n\n".
-	 "  ${TBDOCBASE}/tutorial/docwrapper.php3?docname=tutorial.html".
-	     "#BatchMode\n",
-	 "$user_name <$user_email>",
-	 "Cc: $TBOPS",
-	 ($logname, "assign.log", "wanassign.log", $nsfile));
+    tblog_email_error($error_data,
+		      "$user_name <$user_email>",
+		      "Config Failure", "$pid/$eid",
+		      "$user_name <$user_email>",
+		      "",
+		      "Cc: $TBOPS",
+		      ($logname, "assign.log", "wanassign.log", $nsfile));
 
     #
     # Back up the work dir for post-mortem debugging. 
@@ -1224,8 +1221,6 @@ END {
     }
     my $saved_exitcode = $?;
     
-    tblog_find_error() if $?;
-
     if ($cleaning) {
 	#
 	# We are screwed; a recursive error. Someone will have to clean
@@ -1241,4 +1236,3 @@ END {
     cleanup();
     $? = $saved_exitcode;
 }
-
