--- a/tbsetup/swapexp.in
+++ b/tbsetup/swapexp.in
@@ -772,7 +772,16 @@ if (! $batch) {
 	
 	print("Done. Exited with status: $?\n")
 	    if (! $quiet);
-	exit($? >> 8);
+
+	my $exit_code = $? >> 8;
+
+	if ($exit_code != 0) {
+	    my $d = tblog_lookup_error();
+	    print tblog_format_error($d);
+	}
+
+	exit $exit_code;
+
     }
     TBdbfork();
 }
@@ -1522,4 +1531,3 @@ END {
     cleanup();
     $? = $saved_exitcode;
 }
-
