Add support for encrypting chunk data. To use, must be built with -DWITH_CRYPTO, which is now statically set to on for this branch.
Seems to work, but I can't know for sure until I add decryption
support to imageunzip.

--- a/os/imagezip/GNUmakefile.in
+++ b/os/imagezip/GNUmakefile.in
@@ -79,7 +79,7 @@ endif
 # Necessary sometimes.
 #PTHREADCFLAGS	+= -DCONDVARS_WORK
 
-CFLAGS		= $(SUBDIRCFLAGS) -I$(SRCDIR) -static
+CFLAGS		= $(SUBDIRCFLAGS) -I$(SRCDIR) -static -DWITH_CRYPTO
 LIBS 		= -lz
 ZIPCFLAGS	= $(CFLAGS) -Wall
 ZIPLIBS		= 
